Fixed style on mobile

--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@ section {
   color: var(--text);
   margin: 0;
   overflow: hidden;
-  min-height: 550px;
+  min-height: 80vh;
   max-height: 800px;
-  height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -56,6 +55,9 @@ menu {
 }
 
 #show-menu-button-container > button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   margin: 0.5rem 1rem;
   height: 2rem;
   width: 3rem;
